Corrected PC ref in initTranscript() and show jPlayer from start, over old main-loader.

--- a/uselect.htm
+++ b/uselect.htm
@@ -31,7 +31,7 @@
 			<!-- video display (when required) -->
 
 			<div id="media-content" class="media-hldr">
-				<div id="jp_container_1" class="jp-video jp-video-360p" style="display:none">
+				<div id="jp_container_1" class="jp-video jp-video-360p">
 					<div id="jquery_jplayer_1" class="jp-jplayer"></div>
 					<div class="jp-gui">
 			    	<div class="jp-video-play" style="display:none">
