cosmetic changes to new loading system

--- a/uselect.htm
+++ b/uselect.htm
@@ -86,10 +86,10 @@
 		    </div><!--end jp_container_1-->
 			</div>
 
-			<div id="main-loader">Loading</div>
+			
 
 			<div id="transcript-content" class="body row scroll-y">
-
+			<div id="main-loader">loading transcript</div>
 			</div>
 
 			<div class="footer row">
