--- a/uselect.htm
+++ b/uselect.htm
@@ -201,11 +201,16 @@
 		</div>
 
 
+<!--[if lt IE 9]>
+  <script src="js/sizzle.js"></script>
+  <script src="js/es5-shim.min.js"></script>
+<![endif]-->
 
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>      
 		<script type="text/javascript" src="js/jquery.scrollto.min.js"></script>
 		<script type="text/javascript" src="js/d3.min.js"></script>  
+		<script type="text/javascript" src="js/popcorn.ie8.js"></script> 
 		<script type="text/javascript" src="js/popcorn.js"></script> 
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script> 
 		<script type="text/javascript" src="js/jquery.bbq.js"></script>   
