cosmetics and content

--- a/uselect.htm
+++ b/uselect.htm
@@ -132,7 +132,7 @@
 			<div id="target-content" class="body row">
 				<div id="about" class="right-panel">
 
-						Navigate the debate by clicking on the transcript.
+						Look for the most popular words used by each of the candidates during the first presidential debate.
 
 				</div>
 				
@@ -143,7 +143,7 @@
 							Keyword(s) Search
 						</div>
 						<form>
-							<p><input id="searchStr" type="text" style="width:160px;border:0"/></p>
+							<p><input id="searchStr" type="text" style="width:160px; height:20px; border:2px solid #666; -webkit-box-shadow: 0 0 10px rgb(249, 183, 43); -moz-box-shadow: 0 0 10px rgb(249, 183, 43); font-size:16px;"></p>
 							<div style="display:none">
 							<p>Spoken by:</p>
 							<p>
@@ -188,7 +188,7 @@
 						<div class="panel-title">
 							Share
 						</div>
-						<div class="share-snippet">Highlight a piece of the transcript to share the correpsonding part of the video.</div>
+						<div class="share-snippet">Highlight a section of the transcript to clip and share that video snippet.	</div>
 						<div id="tweet-like">
 						</div>
 					</div>
@@ -196,7 +196,7 @@
 			</div>
 
 			<div id="corner-text" class="footer row">
-				<p>The chart on the left represents the times within 5 minute slots each speaker mentions a certain word or phrase.</p>
+				<p>Click on the bars to the left to watch the video segment where your keyword is mentioned by each of the candidates.</p>
 			</div>
 		</div>
 
