--- a/d3.sandbox.htm
+++ b/d3.sandbox.htm
@@ -26,7 +26,7 @@
 <![endif]-->
 
 		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/d3.min.js"></script>  
+		<script type="text/javascript" src="js/d3.v2.min.js"></script>  
 		<script type="text/javascript" src="js/d3.sandbox.js"></script>  
 	</body>
 </html>
