--- a/d3.sandbox.htm
+++ b/d3.sandbox.htm
@@ -19,6 +19,9 @@
 			| <a href="#" id="pie-b">25:40</a>
 			| <a href="#" id="pie-c">60:50</a>
 			| <a href="#" id="pie-d">90:15</a>
+			| <a href="#" id="pie-e">0:1</a>
+			| <a href="#" id="pie-f">1:0</a>
+			| <a href="#" id="pie-g">0:0</a>
 		</p>
 <!--[if lt IE 9]>
   <script src="js/sizzle.js"></script>
