--- a/uselect.htm
+++ b/uselect.htm
@@ -209,7 +209,7 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jplayer.js"></script>      
 		<script type="text/javascript" src="js/jquery.scrollto.min.js"></script>
-		<script type="text/javascript" src="js/d3.min.js"></script>  
+		<script type="text/javascript" src="js/d3.v2.min.js"></script>  
 		<script type="text/javascript" src="js/popcorn.ie8.js"></script> 
 		<script type="text/javascript" src="js/popcorn.js"></script> 
 		<script type="text/javascript" src="js/popcorn.transcript.js"></script> 
