poster change, search box focus, tesxt change

--- a/uselect.htm
+++ b/uselect.htm
@@ -132,7 +132,7 @@
 			<div id="target-content" class="body row">
 				<div id="about" class="right-panel">
 
-						Look for the most popular words used by each of the candidates during the first presidential debate.
+						See which words were most often used by each of the candidates during the first presidential debate.
 
 				</div>
 				
