experimental hiding of graph initially

--- a/uselect.htm
+++ b/uselect.htm
@@ -92,7 +92,7 @@
 			<div id="main-loader">loading transcript</div>
 			</div>
 
-			<div class="footer row">
+			<div class="footer row" style="display:none">
 				<p></p>
 				<div id="chart" style="padding-left:16px;height:70px;width:736px">
 				</div>
@@ -195,7 +195,7 @@
 				</p>
 			</div>
 
-			<div id="corner-text" class="footer row">
+			<div id="corner-text" class="footer row" style="display:none">
 				<p>Click on the bars to the left to watch the video segment where your keyword is mentioned by each of the candidates.</p>
 			</div>
 		</div>
