updated jplayer to 2.2.0

--- a/uselect.htm
+++ b/uselect.htm
@@ -207,7 +207,7 @@
 <![endif]-->
 
 		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/jquery.jplayer.js"></script>      
+		<script type="text/javascript" src="js/jquery.jplayer.min.js"></script>      
 		<script type="text/javascript" src="js/jquery.scrollto.min.js"></script>
 		<script type="text/javascript" src="js/d3.v2.min.js"></script>  
 		<script type="text/javascript" src="js/popcorn.ie8.js"></script> 
