Corrected link text in d3.sandbox.htm and made JS same as main.

--- a/d3.sandbox.htm
+++ b/d3.sandbox.htm
@@ -15,7 +15,7 @@
 		<div style="height:120px" id="pie-chart"><span style="line-height:100px">Loading ...</span></div>
 
 		<p>
-			<a href="#" id="pie-a">5:10</a>
+			DEM:REP <a href="#" id="pie-a">5:10</a>
 			| <a href="#" id="pie-b">25:40</a>
 			| <a href="#" id="pie-c">60:50</a>
 			| <a href="#" id="pie-d">90:15</a>
