cosmetic graph display on search

--- a/uselect.htm
+++ b/uselect.htm
@@ -123,6 +123,7 @@
 				  </table>
 				</div>
 			</div>
+			<div class="mini-footer row"></div>
 		</div>
 
 		<!-- target content -->
@@ -198,6 +199,8 @@
 			<div id="corner-text" class="footer row" style="display:none">
 				<p>Click on the bars to the left to watch the video segment where your keyword is mentioned by each of the candidates.</p>
 			</div>
+
+			<div class="mini-footer row"></div>
 		</div>
 
 
