--- a/uselect.htm
+++ b/uselect.htm
@@ -94,10 +94,10 @@
 
 			<div class="footer row" style="display:none">
 				<p></p>
-				<div id="chart" style="padding-left:16px;height:70px;width:736px">
+				<div id="chart" style="padding-left:16px;height:70px;width:720px">
 				</div>
-				<div style="height:50px;width:736px;font-size:12px;padding:0px 16px">
-				  <table width="100%" class="table-bar" style="width:736px;padding:0px" cellspacing="0" cellpadding="0">
+				<div style="height:50px;width:720px;font-size:12px;padding:0 0 0 16px">
+				  <table class="table-bar" style="width:720px;padding:0px" cellspacing="0" cellpadding="0">
 				    <tr>
 				      <td>5</td>
 				      <td>10</td>
@@ -118,7 +118,7 @@
 				      <td>85</td>
 				      <td>90</td>
 				      <td>95</td>
-				      <td></td>
+				      <td>100</td>
 				    </tr>
 				  </table>
 				</div>
