Change bar chart 100 to mins (bold)

--- a/uselect.htm
+++ b/uselect.htm
@@ -117,8 +117,8 @@
 				      <td>80</td>
 				      <td>85</td>
 				      <td>90</td>
-				      <td>95</td>
-				      <td>100</td>
+				      <td class="table-pen-td">95</td>
+				      <td class="table-last-td">mins</td>
 				    </tr>
 				  </table>
 				</div>
