more cosmetic tweaks

--- a/uselect.htm
+++ b/uselect.htm
@@ -184,7 +184,6 @@
 					</div>
 				</p>
 				<p>
-					<!--<span class="bar">1:4,2:3,3:2,4:1</span>-->
 					<div class="right-panel">
 						<div class="panel-title">
 							Share
@@ -192,6 +191,16 @@
 						<div class="share-snippet">Highlight a section of the transcript to clip and share that video snippet.	</div>
 						<div id="tweet-like">
 						</div>
+					</div>
+				</p>
+				<p>
+					<div id="transcript-inst-panel" class="right-panel">
+						<div class="panel-title">
+							Transcript
+						</div>
+						<p id="transcript-inst">
+							Click or touch words in the transcript to navigate to that part of the debate.
+						</p>
 					</div>
 				</p>
 			</div>
