--- a/uselect.htm
+++ b/uselect.htm
@@ -19,7 +19,7 @@
 		<div id="control-hldr">
 
 			<div class="control">
-				US Presidential Debate - Domestic Policy (Oct 3)
+				US Presidential Debate - Domestic Policy (Oct 3) <span class="logos"><a href="http://aljazeera.com"><img src="aj.png"></a><a href="http://creativecommons.org/"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/"><img src="on.png"></a></span>
 			</div>
 		</div>
 
