--- a/uselect.htm
+++ b/uselect.htm
@@ -199,7 +199,7 @@
 							Transcript
 						</div>
 						<p id="transcript-inst">
-							Click or touch words in the transcript to navigate to that part of the debate.
+							Click or touch words in the transcript to view the corresponding part of the debate.
 						</p>
 					</div>
 				</p>
