--- a/uselect.htm
+++ b/uselect.htm
@@ -94,9 +94,9 @@
 
 			<div class="footer row" style="display:none">
 				<p></p>
-				<div id="chart" style="padding-left:16px;height:70px;width:720px">
+				<div id="chart">
 				</div>
-				<div style="height:50px;width:720px;font-size:12px;padding:0 0 0 16px">
+				<div style="height:50px;font-size:12px;padding:0 0 0 16px">
 				  <table class="table-bar" style="width:720px;padding:0px" cellspacing="0" cellpadding="0">
 				    <tr>
 				      <td>5</td>
@@ -144,7 +144,7 @@
 							Keyword(s) Search
 						</div>
 						<form>
-							<p><input id="searchStr" type="text" style="width:160px; height:20px; border:2px solid #666; -webkit-box-shadow: 0 0 10px rgb(249, 183, 43); -moz-box-shadow: 0 0 10px rgb(249, 183, 43); font-size:16px;"></p>
+							<p><input class="search-str" id="searchStr" type="text"></p>
 							<div style="display:none">
 							<p>Spoken by:</p>
 							<p>
