Made logo links target _blank. Updated CC link url.

--- a/uselect.htm
+++ b/uselect.htm
@@ -19,7 +19,7 @@
 		<div id="control-hldr">
 
 			<div class="control">
-				US Presidential Debate - Domestic Policy (Oct 3) <span class="logos"><a href="http://aljazeera.com"><img src="aj.png"></a><a href="http://creativecommons.org/"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/"><img src="on.png"></a></span>
+				US Presidential Debate - Domestic Policy (Oct 3) <span class="logos"><a href="http://aljazeera.com" target="_blank"><img src="aj.png"></a><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" target="_blank"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/" target="_blank"><img src="on.png"></a></span>
 			</div>
 		</div>
 
