styling and chrome fix also twitter fix

--- a/uselect.htm
+++ b/uselect.htm
@@ -19,7 +19,7 @@
 		<div id="control-hldr">
 
 			<div class="control">
-				US Presidential Debate - Domestic Policy (Oct 3) <span class="logos"><a href="http://aljazeera.com" target="_blank"><img src="aj.png"></a><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" target="_blank"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/" target="_blank"><img src="on.png"></a></span>
+				US Presidential Debate - Domestic Policy (Oct 3) 
 			</div>
 		</div>
 
@@ -123,7 +123,9 @@
 				  </table>
 				</div>
 			</div>
-			<div class="mini-footer row"></div>
+			<div class="mini-footer row">
+			</div>
+			<div class="credits row"></div>
 		</div>
 
 		<!-- target content -->
@@ -138,7 +140,7 @@
 				</div>
 				
 
-				<p>
+
 					<div class="right-panel">
 						<div class="panel-title">
 							Keyword(s) Search
@@ -155,8 +157,7 @@
 							<input id="search-btn" type="button" value="search transcript">
 						</form>
 					</div>
-				</p>
-				<p>
+
 					<div class="right-panel">
 						<div id="pieTitle" class="panel-title">
 							Total Words
@@ -182,8 +183,7 @@
 						<!--<div id="pie-talk"></div>-->
 						<div style="height:120px" id="pie-chart"><span style="line-height:100px">Loading ...</span></div>
 					</div>
-				</p>
-				<p>
+
 					<div class="right-panel">
 						<div class="panel-title">
 							Share
@@ -192,8 +192,7 @@
 						<div id="tweet-like">
 						</div>
 					</div>
-				</p>
-				<p>
+
 					<div id="transcript-inst-panel" class="right-panel">
 						<div class="panel-title">
 							Transcript
@@ -202,14 +201,19 @@
 							Click or touch words in the transcript to view the corresponding part of the debate.
 						</p>
 					</div>
-				</p>
+
 			</div>
 
 			<div id="corner-text" class="footer row" style="display:none">
 				<p>Click on the bars to the left to watch the video segment where your keyword is mentioned by each of the candidates.</p>
 			</div>
 
-			<div class="mini-footer row"></div>
+			<div class="mini-footer row">
+				
+			</div>
+			<div class="credits row">
+				<span class="logos"><a href="http://aljazeera.com" target="_blank"><img src="aj.png"></a><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" target="_blank"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/" target="_blank"><img src="on.png"></a></span>
+			</div>
 		</div>
 
 
