finsihing off debate 2 - easter egg implemented

--- a/uselect.htm
+++ b/uselect.htm
@@ -17,9 +17,8 @@
 		</div>
 
 		<div id="control-hldr">
-
 			<div class="control">
-				US Presidential Debate - Domestic Policy (Oct 3) 
+				US Vice Presidential Debate - Foreign and Domestic Policy (Oct 11)
 			</div>
 		</div>
 
@@ -127,9 +126,8 @@
 			<div class="mini-footer row">
 			</div>
 			<div class="credits row">
-				<div id="sponsor">
-					<div>Transcript by</div> <a href="http://www.3playmedia.com" target="_blank"><img src="3playmedialogo.png" /></a>
-				</div>
+				<a href="http://aljazeera.com" target="_blank"><img src="aj.png" /></a>
+				<a href="http://www.mozillaopennews.org/" target="_blank"><img src="on.png" /></a>
 			</div>
 		</div>
 
@@ -140,7 +138,7 @@
 			<div id="target-content" class="body row">
 				<div id="about" class="right-panel">
 
-						See which words were most often used by each of the candidates during the first presidential debate.
+						See which words were most often used by each of the candidates during the vice presidential debate.
 
 				</div>
 				
@@ -170,10 +168,10 @@
 						<table class="table-talk">
 							<tr>
 								<td>
-									Romney
+									Ryan
 								</td>
 								<td>
-									Obama
+									Biden
 								</td>
 							</tr>
 							<tr>
@@ -220,7 +218,10 @@
 				
 			</div>
 			<div class="credits row">
-				<span class="logos"><a href="http://aljazeera.com" target="_blank"><img src="aj.png"></a><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" target="_blank"><img src="cc.png"></a><a href="http://www.mozillaopennews.org/" target="_blank"><img src="on.png"></a></span>
+				<span class="content-org">
+					<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US" target="_blank"><img src="cc.png"></a>
+					<a href="http://www.3playmedia.com" target="_blank"><img src="3playmedialogo.png"></a>
+				</span>
 			</div>
 		</div>
 
